--- a/exo4/style.css
+++ b/exo4/style.css
@@ -3,10 +3,17 @@ main{
   display: flex;
   flex-wrap: wrap;
   background-color: black;
+  justify-content: center;
 }
 
 main, header,aside,content,footer{
   border-style: solid;
+  border-width: 4px;
+}
+
+.center{
+  display: flex;
+  flex-wrap: nowrap;
 }
 
 header, footer{
@@ -30,7 +37,7 @@ aside{
 
 content{
   background-color: orange;
-  flex-basis: 60%;
+  flex-basis: 58%;
 }
 
 ul{
